--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -79,6 +79,7 @@
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
                 android:textSize="15sp"
+                android:inputType="textPassword"
                 tools:ignore="TouchTargetSizeCheck" />
 
             <Button
