--- a/app/src/main/res/layout/activity_profile_edit.xml
+++ b/app/src/main/res/layout/activity_profile_edit.xml
@@ -34,7 +34,7 @@
                     android:layout_gravity="center">
 
                     <ImageButton
-                        android:id="@+id/back_to_home"
+                        android:id="@+id/back_to_home_from_edit"
                         android:layout_width="50dp"
                         android:layout_height="50dp"
                         android:padding="10dp"
@@ -65,11 +65,11 @@
                     app:cardElevation="0dp"
                     app:cardCornerRadius="10dp">
 
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginHorizontal="20dp"
-                    android:src="@drawable/photo_main"/>
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginHorizontal="20dp"
+                        android:src="@drawable/photo_main"/>
                 </androidx.cardview.widget.CardView>
 
                 <!--Info my profile-->
@@ -86,10 +86,11 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="8dp"
                         android:orientation="horizontal">
-                        <TextView
-                            android:id="@+id/user_profile_name"
+                        <EditText
+                            android:id="@+id/edit_user_name"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:background="@android:color/transparent"
                             android:text="Jesica"
                             android:textSize="25sp"
                             android:textColor="@color/white"
@@ -123,10 +124,11 @@
                             android:textColor="@color/white"
                             android:text="@string/profession"
                             android:textSize="18sp"/>
-                        <TextView
-                            android:id="@+id/profile_job"
+                        <EditText
+                            android:id="@+id/edit_job"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:background="@android:color/transparent"
                             android:text="Diseñadora"
                             android:textColor="@color/white"
                             android:textSize="18sp"/>
@@ -144,11 +146,12 @@
                             android:textColor="@color/white"
                             android:text="@string/email_profile"
                             android:textSize="18sp"/>
-                        <TextView
-                            android:id="@+id/profile_email"
+                        <EditText
+                            android:id="@+id/edit_email"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Diseñadora"
+                            android:background="@android:color/transparent"
+                            android:text="alguien@gmail.com"
                             android:textColor="@color/white"
                             android:textSize="18sp"/>
                     </LinearLayout>
@@ -165,12 +168,14 @@
                             android:textColor="@color/white"
                             android:text="@string/password_profile"
                             android:textSize="18sp"/>
-                        <TextView
+                        <EditText
                             android:id="@+id/profile_password"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:background="@android:color/transparent"
                             android:text="*********"
                             android:textColor="@color/white"
+                            android:inputType="textPassword"
                             android:textSize="18sp"/>
                     </LinearLayout>
 
@@ -186,11 +191,12 @@
                             android:textColor="@color/white"
                             android:text="@string/date_birth_profile"
                             android:textSize="18sp"/>
-                        <TextView
+                        <EditText
                             android:id="@+id/date_birth_profile"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="15/10/2000"
+                            android:background="@android:color/transparent"
+                            android:text="2000-12-23"
                             android:textColor="@color/white"
                             android:textSize="16sp"/>
                     </LinearLayout>
@@ -249,15 +255,15 @@
                         android:textSize="16sp"/>
                 </LinearLayout>
 
-                <!--Edit profile-->
+                <!--Save profile-->
                 <Button
-                    android:id="@+id/edit_profile_data"
+                    android:id="@+id/save_profile_data"
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
                     android:layout_marginVertical="20dp"
                     android:layout_gravity="center"
                     android:background="@drawable/border_green_white_round"
-                    android:text="@string/edit_data_profile"
+                    android:text="@string/save_data_profile"
                     android:textSize="18sp"
                     android:textAllCaps="false"/>
 
@@ -1148,7 +1154,7 @@
 
                 <!--Logout-->
                 <Button
-                    android:id="@+id/log_out"
+                    android:id="@+id/log_out_from_edit"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="30dp"
