--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -91,7 +91,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginRight="5dp"
-                            android:text="Jesica"
+                            android:text="cc"
                             android:textSize="25sp"
                             android:textColor="@color/white"
                             android:textStyle="bold"/>
@@ -99,7 +99,7 @@
                             android:id="@+id/user_profile_lastname"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Mendoza"
+                            android:text=""
                             android:textSize="25sp"
                             android:textColor="@color/white"
                             android:textStyle="bold"/>
