--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -91,7 +91,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginRight="5dp"
-                            android:text="cc"
+                            android:text=""
                             android:textSize="25sp"
                             android:textColor="@color/white"
                             android:textStyle="bold"/>
@@ -136,7 +136,7 @@
                             android:id="@+id/profile_job"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Diseñadora"
+                            android:text=""
                             android:textColor="@color/white"
                             android:textSize="18sp"/>
                     </LinearLayout>
@@ -157,7 +157,7 @@
                             android:id="@+id/profile_email"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Diseñadora"
+                            android:text=""
                             android:textColor="@color/white"
                             android:textSize="18sp"/>
                     </LinearLayout>
@@ -199,7 +199,7 @@
                             android:id="@+id/date_birth_profile"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="15/10/2000"
+                            android:text=""
                             android:textColor="@color/white"
                             android:textSize="16sp"/>
                     </LinearLayout>
@@ -254,7 +254,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textColor="@color/white"
-                        android:text="@string/profile_description"
+                        android:text=""
                         android:textSize="16sp"/>
                 </LinearLayout>
 
